--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MobiPix</string>
+    <string name="question_text">This is question</string>
+    <string name="true_button">MobiPix</string>
+    <string name="false_button">MobiPix</string>
 </resources>
