--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">MobiPix</string>
     <string name="question_australia">Canberra is the capital of Australia</string>
-    <string name="true_button">MobiPix</string>
-    <string name="false_button">MobiPix</string>
+    <string name="true_button">true</string>
+    <string name="false_button">false</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">In Correct</string>
     <string name="next_button">Next</string>
