--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="true_button">true</string>
     <string name="false_button">false</string>
     <string name="correct_toast">Correct!</string>
+    <string name="crime_title_label">label</string>
+    <string name="crime_title_hint">hint</string>
+    <string name="crime_details_label">detail</string>
     <string name="incorrect_toast">In Correct</string>
     <string name="next_button">Next</string>
     <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
